0.201  2013-03-13
  * Add new merge method
  * Add license info and github repo to meta
  * Doc updates

0.200  2013-02-15
  * Removed Log::Defer::Viz since it's getting its own
    CPAN distribution so you don't need to install its
    dependencies on your servers
  * Added verbosity option
  * Now you can pass a hashref into the constructor
    in order to support extra args (like verbosity).
    The old way is still supported too.
  * Added no-overhead debug logging (see docs)
  * Don't include MYMETA in CPAN dist
  * Doc updates

0.12   2012-07-05
  * Log::Defer::Viz ASCII art drawing of timer data

0.11   2012-06-28
  * OK now I have CPAN versions figured out :)

0.02   2012-06-28
  * Version number fix

0.1.1   2012-06-17
  * Test accidentally depended on JSON::XS

0.1   2012-06-17
  * Initial release