@@ -228,16 +228,18 @@ Here is a prettified example of a JSON-encoded message:
        "data" : {
           "junkdata" : "some data"
        },
-       "timers" : {
-          "junktimer" : [
+       "timers" : [
+          [
+             "junktimer",
              0.000224,
              0.100655
           ],
-          "junktimer2" : [
+          [
+             "junktimer2",
              0.000281,
              0.202386
           ]
-       }
+       ]
     }
 
 
